--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    <script type="module" src="script.js"></script>
+    <script src="utilities.js"></script>
+    <script src="player.js"></script>
+    <script src="zombie.js"></script>
+    <script src="game.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
