--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="player.js"></script>
     <script src="zombie.js"></script>
     <script src="game.js"></script>
+    <script src="projectile.js"></script>
     <script type="module" src="main.js"></script>
 </body>
 </html>
