--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <script src="zombie.js"></script>
     <script src="game.js"></script>
     <script src="projectile.js"></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
