--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="game.js"></script>
     <script src="projectile.js"></script>
     <script src="powerup.js"></script>
+    <img src="zombieleft.png" id="zombie" style="display: none;">
     <script type="module" src="script.js"></script>
 </body>
 </html>
