--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="projectile.js"></script>
     <script src="powerup.js"></script>
     <img src="zombieleft.png" id="zombie" style="display: none;">
+    <img src="health_potion.jpg" id="health" style="display: none;">
     <script type="module" src="script.js"></script>
 </body>
 </html>
