--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    <script src="utilities.js"></script>
     <script src="player.js"></script>
     <script src="zombie.js"></script>
     <script src="game.js"></script>
     <script src="projectile.js"></script>
     <script src="powerup.js"></script>
+    <script src="weapon.js"></script>
     <img src="zombieleft.png" id="zombie" style="display: none;">
+    <img src="zombie_right.png" id="zombieright" style="display: none;">
     <img src="health_potion.jpg" id="health" style="display: none;">
     <script type="module" src="script.js"></script>
 </body>
