--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <script src="projectile.js"></script>
     <script src="powerup.js"></script>
     <script src="weapon.js"></script>
+    <script src="climberZombie.js"></script>
     <img src="zombieleft.png" id="zombie" style="display: none;">
+    <img src="spriteright.jpg" id="spriteright" style="display: none;">
+    <img src="climbing_zombieleft.jpg" id="climberzombieleft" style="display: none;">
+    <img src="sprite.jpg" id="sprite" style="display: none;">
     <img src="zombie_right.png" id="zombieright" style="display: none;">
     <img src="health_potion.jpg" id="health" style="display: none;">
     <script type="module" src="script.js"></script>
