--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="projectile.js"></script>
     <script src="powerup.js"></script>
     <script src="weapon.js"></script>
+    <script src="defense.js"></script>
+    <script src="inventory.js"></script>
     <script src="climberZombie.js"></script>
     <img src="zombieleft.png" id="zombie" style="display: none;">
     <img src="spriteright.jpg" id="spriteright" style="display: none;">
