--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="powerup.js"></script>
     <script src="weapon.js"></script>
     <script src="defense.js"></script>
+    <img src="landmine.jpg" id="landmine" style="display: none;">
     <script src="inventory.js"></script>
     <script src="climberZombie.js"></script>
     <img src="zombieleft.png" id="zombie" style="display: none;">
