--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
     <script src="powerup.js"></script>
     <script src="weapon.js"></script>
     <script src="defense.js"></script>
+    <script src="shooterassist.js"></script>
     <img src="landmine.jpg" id="landmine" style="display: none;">
     <script src="inventory.js"></script>
     <script src="climberZombie.js"></script>
     <img src="zombieleft.png" id="zombie" style="display: none;">
+    <img src="playerleft.png" id="player" style="display: none;">
     <img src="spriteright.jpg" id="spriteright" style="display: none;">
     <img src="climbing_zombieleft.jpg" id="climberzombieleft" style="display: none;">
     <img src="sprite.jpg" id="sprite" style="display: none;">
     <img src="zombie_right.png" id="zombieright" style="display: none;">
     <img src="health_potion.jpg" id="health" style="display: none;">
+    <img src="playerjump.jpg" id="jumpright" style="display: none;">
+    <img id="cannon" src="cannon.jpg" style="display: none;">
     <script type="module" src="script.js"></script>
 </body>
 </html>
