--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <img src="zombie_right.png" id="zombieright" style="display: none;">
     <img src="health_potion.jpg" id="health" style="display: none;">
     <img src="playerjump.jpg" id="jumpright" style="display: none;">
+    <img src="playerjumpleft.jpg" id="jumpleft" style="display: none;">
     <img id="cannon" src="cannon.jpg" style="display: none;">
-    <script type="module" src="script.js"></script>
+    <img id="freezeimage" src="freezeimage.png" style="display: none;">
+    <img id="playerRight" src="playerright.jpg" style="display: none;">
+    <script  src="script.js"></script>
 </body>
 </html>
