--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <img id="cannon" src="cannon.jpg" style="display: none;">
     <img id="freezeimage" src="freezeimage.png" style="display: none;">
     <img id="playerRight" src="playerright.jpg" style="display: none;">
+    <img id="trap" src="trap.jpg" style="display: none;">
+    <audio id="endgame" src="mixkit-arcade-game-complete-or-approved-mission-205.wav"></audio>
+    <audio id="zombieKill" src="mixkit-video-game-blood-pop-2361_zxD3fYP3.wav"></audio>
+    <audio id="zombieHit" src="mixkit-small-hit-in-a-game-2072.wav"></audio>
+    <audio id="powered" src="mixkit-quick-positive-video-game-notification-interface-265_4afHzuGq.wav"></audio>
+    <audio id="blast" src="mixkit-arcade-game-explosion-2759.wav"></audio>
     <script  src="script.js"></script>
 </body>
 </html>
