--- a/index.html
+++ b/index.html
@@ -4,39 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Last Stand</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        *{
+            background-color: #222222;
+            color: aliceblue;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <canvas id="canvas1"></canvas>
-    <script src="player.js"></script>
-    <script src="zombie.js"></script>
-    <script src="game.js"></script>
-    <script src="projectile.js"></script>
-    <script src="powerup.js"></script>
-    <script src="weapon.js"></script>
-    <script src="defense.js"></script>
-    <script src="shooterassist.js"></script>
-    <img src="landmine.jpg" id="landmine" style="display: none;">
-    <script src="inventory.js"></script>
-    <script src="climberZombie.js"></script>
-    <img src="zombieleft.png" id="zombie" style="display: none;">
-    <img src="playerleft.png" id="player" style="display: none;">
-    <img src="spriteright.jpg" id="spriteright" style="display: none;">
-    <img src="climbing_zombieleft.jpg" id="climberzombieleft" style="display: none;">
-    <img src="sprite.jpg" id="sprite" style="display: none;">
-    <img src="zombie_right.png" id="zombieright" style="display: none;">
-    <img src="health_potion.jpg" id="health" style="display: none;">
-    <img src="playerjump.jpg" id="jumpright" style="display: none;">
-    <img src="playerjumpleft.jpg" id="jumpleft" style="display: none;">
-    <img id="cannon" src="cannon.jpg" style="display: none;">
-    <img id="freezeimage" src="freezeimage.png" style="display: none;">
-    <img id="playerRight" src="playerright.jpg" style="display: none;">
-    <img id="trap" src="trap.jpg" style="display: none;">
-    <audio id="endgame" src="mixkit-arcade-game-complete-or-approved-mission-205.wav"></audio>
-    <audio id="zombieKill" src="mixkit-video-game-blood-pop-2361_zxD3fYP3.wav"></audio>
-    <audio id="zombieHit" src="mixkit-small-hit-in-a-game-2072.wav"></audio>
-    <audio id="powered" src="mixkit-quick-positive-video-game-notification-interface-265_4afHzuGq.wav"></audio>
-    <audio id="blast" src="mixkit-arcade-game-explosion-2759.wav"></audio>
-    <script  src="script.js"></script>
+    <h1 style="text-align: center; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 900; color: rgba(229, 17, 17, 0.768);">LAST STAND</h1>
+    <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:18px; color:beige ;">Welcome to Last Stand! where You are the lone survivor battling against deadly zombies. Defend yourself against this relentless zombie apocalypse.
+    </p>
+    <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:18px; color:beige ;"> You could use the inventory to set up a base to protect yourself before the invasion starts. As the game starts, zombies invade from both sides, attempting to kill you. Zombies damage and destroy any blocks in their path, allowing them to advance. You can move and shoot zombies to prevent them from getting close. The game ends if you loses all your health and you'll be overtaken by the zombies.</p>
+    <h2 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgba(229, 17, 17, 0.768);">INSTRUCTIONS</h2>
+    <p>To shoot or fire at the zombie, press 'f'.</p>
+    <p>To move left,right and jump to use your jetpack, use the arrowkeys 'left','right' and 'up' correspondingly.</p>
+    <p>To Pause/Play game, press 'p'.</p>
+    <p>To use the defense items in the inventory, mouse-click anywhere ONLY on the base-line of the game.</p>
+    <p>A Mine can Blast the zombie.</p>
+    <p>A Trap can slow down the speed of the zombie by half.</p>
+    <p>A Block can block only upto three of the Sleep-Walking Zombies.</p>
+    <p>press 1 to switch defense to 'Mine' , press 2 to 'Trap' and press 3 for 'Block'.</p>
+    <p>You have 2 weapons, shotgun by default and Ranger. To Switch between weapons, press key 'w'.</p>
+    <p>Grab the Powerups to fight better against the zombies.</p>
+    <button style="height: 50px; width:250px;">
+        <a href="index2.html" style="text-decoration: none; font-size: 23px;font-weight:bold; color: rgb(244, 141, 15);">Go To Play</a>
+    </button>
 </body>
 </html>
