--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Last Stand</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+    <style>
+        body {
+        font-family: "Press Start 2P", system-ui;
+        font-weight: 400;
+        font-style: normal;
+        }
+
+    </style>
 </head>
 <body>
     <canvas id="canvas1"></canvas>
@@ -16,7 +31,7 @@
     <script src="weapon.js"></script>
     <script src="defense.js"></script>
     <script src="shooterassist.js"></script>
-    <img src="landmine.jpg" id="landmine" style="display: none;">
+    <img src="WhatsApp Image 2024-06-22 at 08.24.47.jpeg" id="landmine" style="display: none;">
     <script src="inventory.js"></script>
     <script src="climberZombie.js"></script>
     <img src="zombieleft.png" id="zombie" style="display: none;">
@@ -32,6 +47,7 @@
     <img id="freezeimage" src="freezeimage.png" style="display: none;">
     <img id="playerRight" src="playerright.jpg" style="display: none;">
     <img id="trap" src="trap.jpg" style="display: none;">
+    <img id="block" src="WhatsApp Image 2024-06-22 at 08.21.35.jpeg" style="display: none;">
     <audio id="endgame" src="mixkit-arcade-game-complete-or-approved-mission-205.wav"></audio>
     <audio id="zombieKill" src="mixkit-video-game-blood-pop-2361_zxD3fYP3.wav"></audio>
     <audio id="zombieHit" src="mixkit-small-hit-in-a-game-2072.wav"></audio>
