--- a/index.html
+++ b/index.html
@@ -4,20 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Last Stand</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
     <style>
         *{
             background-color: #222222;
             color: aliceblue;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
+        .creepster-regular {
+            font-family: "Creepster", system-ui;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 40px;
+        }
+        p{
+            font-family: "Creepster", system-ui;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 25px;
+        }
+
     </style>
 </head>
 <body>
-    <h1 style="text-align: center; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 900; color: rgba(229, 17, 17, 0.768);">LAST STAND</h1>
-    <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:18px; color:beige ;">Welcome to Last Stand! where You are the lone survivor battling against deadly zombies. Defend yourself against this relentless zombie apocalypse.
+    <h1 class = 'creepster-regular' style="text-align: center;  font-weight: 900; font-size: 70px; color: rgba(229, 17, 17, 0.768);">LAST STAND</h1>
+    <p class = 'creepster-regular'style="font-size:25px; color:beige ;">Welcome to Last Stand! where You are the lone survivor battling against deadly zombies. Defend yourself against this relentless zombie apocalypse.
     </p>
-    <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:18px; color:beige ;"> You could use the inventory to set up a base to protect yourself before the invasion starts. As the game starts, zombies invade from both sides, attempting to kill you. Zombies damage and destroy any blocks in their path, allowing them to advance. You can move and shoot zombies to prevent them from getting close. The game ends if you loses all your health and you'll be overtaken by the zombies.</p>
-    <h2 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgba(229, 17, 17, 0.768);">INSTRUCTIONS</h2>
+    <p class = 'creepster-regular' style=" font-size:25px; color:beige ;"> You could use the inventory to set up a base to protect yourself before the invasion starts. As the game starts, zombies invade from both sides, attempting to kill you. Zombies damage and destroy any blocks in their path, allowing them to advance. You can move and shoot zombies to prevent them from getting close. The game ends if you loses all your health and you'll be overtaken by the zombies.</p>
+    <h2 class = 'creepster-regular' style="color: rgba(229, 17, 17, 0.768); font-size: 70px;">INSTRUCTIONS</h2>
     <p>To shoot or fire at the zombie, press 'f'.</p>
     <p>To move left,right and jump to use your jetpack, use the arrowkeys 'left','right' and 'up' correspondingly.</p>
     <p>To Pause/Play game, press 'p'.</p>
